Commits for the jpa integration.